# rhea-surf

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  ship.yaml
.reeves/: govern.yaml  ship.yaml
.taskr/: deploy.yaml  publish.yaml  verify.yaml
configs/: opencode.example.json
docs/: agent-hierarchy.md  architecture.md  design-principles.md  meta-study.md  models.md
docs/research/: 2025-02-02-initial-research.md  opencode-validated.md
learned/: patterns.json
surf/: __init__.py  agent.py  browser.py  cache.py  debate.py  dom.py  learner.py  learning_loop.py  llm.py  memory.py  navigator.py  patterns.py  recursive.py  stress.py  study.py  vision.py
surf/js/: buildDomTree.js
tests/: test_agent.py  test_navigator.py
