[project]
name = "rhea-surf"
version = "0.1.0"
description = "Browser automation for local LLMs"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
